unpackaged/main/default/objects/LiveChatTranscript__c/LiveChatTranscript__c.object-meta.xml
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <label>LiveChatTranscript__c</label>
    <nameField>
        <displayFormat>LCT-{000000}</displayFormat>
        <label>LiveChatTranscript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveChatTranscript__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>