unpackaged/main/default/objects/LiveChatTranscript__c/fields/Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Abandoned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abandoned</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>