unpackaged/main/default/objects/LiveChatTranscript__c/fields/AverageResponseTimeOperator__c.field-meta.xml
<CustomField>
    <fullName>AverageResponseTimeOperator__c</fullName>
    <label>AverageResponseTimeOperator</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>