unpackaged/main/default/objects/LiveChatTranscript__c/fields/AverageResponseTimeVisitor__c.field-meta.xml
<CustomField>
    <fullName>AverageResponseTimeVisitor__c</fullName>
    <label>AverageResponseTimeVisitor</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>