unpackaged/main/default/objects/LiveChatTranscript__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <length>200</length>
    <type>Text</type>
</CustomField>