unpackaged/main/default/objects/LiveChatTranscript__c/fields/BrowserLanguage__c.field-meta.xml
<CustomField>
    <fullName>BrowserLanguage__c</fullName>
    <label>BrowserLanguage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>