unpackaged/main/default/objects/LiveChatTranscript__c/fields/ChatDuration__c.field-meta.xml
<CustomField>
    <fullName>ChatDuration__c</fullName>
    <label>Chat Duration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>