unpackaged/main/default/objects/LiveChatTranscript__c/fields/ChatKey__c.field-meta.xml
<CustomField>
    <fullName>ChatKey__c</fullName>
    <label>ChatKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>