unpackaged/main/default/objects/LiveChatTranscript__c/fields/EndedBy__c.field-meta.xml
<CustomField>
    <fullName>EndedBy__c</fullName>
    <label>EndedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>