unpackaged/main/default/objects/LiveChatTranscript__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <type>DateTime</type>
</CustomField>