unpackaged/main/default/objects/LiveChatTranscript__c/fields/IpAddress__c.field-meta.xml
<CustomField>
    <fullName>IpAddress__c</fullName>
    <label>IpAddress</label>
    <length>39</length>
    <type>Text</type>
</CustomField>