unpackaged/main/default/objects/LiveChatTranscript__c/fields/LiveChatButtonId__c.field-meta.xml
<CustomField>
    <fullName>LiveChatButtonId__c</fullName>
    <label>LiveChatButton ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>