unpackaged/main/default/objects/LiveChatTranscript__c/fields/MaxResponseTimeOperator__c.field-meta.xml
<CustomField>
    <fullName>MaxResponseTimeOperator__c</fullName>
    <label>MaxResponseTimeOperator</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>