unpackaged/main/default/objects/LiveChatTranscript__c/fields/MaxResponseTimeVisitor__c.field-meta.xml
<CustomField>
    <fullName>MaxResponseTimeVisitor__c</fullName>
    <label>MaxResponseTimeVisitor</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>