unpackaged/main/default/objects/LiveChatTranscript__c/fields/OperatorMessageCount__c.field-meta.xml
<CustomField>
    <fullName>OperatorMessageCount__c</fullName>
    <label>OperatorMessageCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>