unpackaged/main/default/objects/LiveChatTranscript__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>