unpackaged/main/default/objects/LiveChatTranscript__c/fields/ReferrerUri__c.field-meta.xml
<CustomField>
    <fullName>ReferrerUri__c</fullName>
    <label>ReferrerUri</label>
    <length>200</length>
    <type>Text</type>
</CustomField>