unpackaged/main/default/objects/LiveChatTranscript__c/fields/ScreenResolution__c.field-meta.xml
<CustomField>
    <fullName>ScreenResolution__c</fullName>
    <label>ScreenResolution</label>
    <length>200</length>
    <type>Text</type>
</CustomField>