unpackaged/main/default/objects/LiveChatTranscript__c/fields/SupervisorTranscriptBody__c.field-meta.xml
<CustomField>
    <fullName>SupervisorTranscriptBody__c</fullName>
    <label>SupervisorTranscriptBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>