unpackaged/main/default/objects/LiveChatTranscript__c/fields/VisitorMessageCount__c.field-meta.xml
<CustomField>
    <fullName>VisitorMessageCount__c</fullName>
    <label>VisitorMessageCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>