unpackaged/main/default/objects/LiveChatTranscript__c/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <label>Wait Time</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>